--- a/css/main.css
+++ b/css/main.css
@@ -43,7 +43,7 @@ html, body{height: 100%;}
 .util li{display: inline-block; margin-left: 10px;}
 
 .util li a{display: block; width: 80px; height: 36px; border-radius: 18px; line-height: 36px;
-            text-align: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 12px;} 
+        text-align: center; color: rgb(255, 255, 255); font-weight: bold; font-size: 12px;} 
 
 .util_1{background:#d90106 ; border-radius: 18px;}
 
@@ -79,5 +79,49 @@ html, body{height: 100%;}
 
 .live_list li a h4{padding: 0 15px;}
 
-.dot{text-align: center; margin: 0 0 30px ;
-    }
+.dot{text-align: center; margin: 0 0 30px ;}
+
+    /* footer영역 */
+#footer{ background-color: #292929;padding: 30px 0; height:270px;}
+
+.foot_inner{width: 1168px; margin: 0 auto;}
+
+.f_menu{float: left;}
+
+.f_menu li{}
+
+.f_menu li a{font-weight: bold; color: white; display: block; padding: 10px 0;}
+
+.f_menu li a.yellow{color: yellow;}
+
+.info{float: left;margin-left: 30px;}
+
+.info li{padding: 10px ;color:#aaa; font-size: 12px;}
+
+
+.sns{float: right;}
+
+.sns li{display: inline-block;}
+
+.sns li a{display: block; width: 40px; height: 40px;background-image: url(../img/ico_sns.png); background-repeat: no-repeat;
+        background-position: 0 0;text-indent: -9999px;margin: 5px;}
+
+.sns_1{}
+
+li.sns_2 a{background-position:0 -40px ;}
+
+li.sns_3 a{background-position:0 -80px ;}
+
+li.sns_4 a{background-position:0 -120px ;}
+
+li.sns_5 a{width: 100px;background-image: url(../img/web_accessibility.png) !important;
+                background-repeat: no-repeat; background-position:0 0;background-size: 100px;
+                height: 90px;}
+
+
+
+.top{width: 120px; position: fixed;left: calc(50% + (1168px / 2) + 50px);  top: 500px;}
+
+.top a{display: block; text-align: center;margin: 10px 0;}
+
+.top .pos{ position: sticky; top: 700px;}
